margins and paddings upgraded

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <section>
     <div class="container">
-      <h2>My offer</h2>
+      <h2>An end to end offer</h2>
       <div class="cards">
         <div class="card">
           <img src="images/back.svg" alt="">
